--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/SergeySukhanov/artHub",
   "dependencies": {
-    "express": "~4.13.4",
     "gulp": "~3.9.1",
-    "gulp-bower": "0.0.13"
+    "gulp-bower": "0.0.13",
+      "gulp-develop-server": "^0.5.1",
+      "gulp-install": "^0.6.0",
+      "express": "~4.13.4",
+      "body-parser": "~1.15.0",
+      "mongoose": "~4.4.11"
   }
 }
