--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "dependencies": {
     "gulp": "~3.9.1",
     "gulp-bower": "0.0.13",
-      "gulp-develop-server": "^0.5.1",
-      "gulp-install": "^0.6.0",
-      "express": "~4.13.4",
-      "body-parser": "~1.15.0",
-      "mongoose": "~4.4.11"
+    "gulp-develop-server": "^0.5.1",
+    "gulp-install": "^0.6.0",
+    "express": "~4.13.4",
+    "body-parser": "~1.15.0",
+    "mongoose": "~4.4.11",
+    "r": "0.0.5"
   }
 }
