--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "gulp-install": "^0.6.0",
     "express": "~4.13.4",
     "body-parser": "~1.15.0",
-    "mongoose": "~4.4.11",
-    "r": "0.0.5"
+    "mongoose": "~4.4.11"
   }
 }
